# platform-prep-kit

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: content.md
.github/workflows/: ci.yml  docker-publish.yml  pages.yml
docs/: agentic-upgrade-plan.md  ai-integration.md  architecture.md  creating-templates.md  getting-started.md  phase1-template-expansion.md  roadmap.md  testing-guide.md
docs/site/: index.html
examples/: example-config-architect.yml  example-config-security.yml
knowledge_packs/: iac-gitops.md  interview-frameworks.md  llmops-patterns.md  mitre-atlas-framework.md  ml-lifecycle.md  nist-ai-risk-management-framework.md  owasp-llm-top-10.md  platform-engineering.md  policy-as-code.md  solutions-engineering.md  sre-fundamentals.md
packs/sre-to-platform-engineer/: README.md  links.md  plan.md
prep_agent/: __init__.py  cli.py  dashboard.py  mcp_server.py  models.py
project_templates/: _schema.yml  ai-platform-engineer.yml  ai-security-engineer.yml  cloud-solutions-architect.yml  devsecops-engineer.yml  site-reliability-engineer.yml
quiz_banks/: ai-platform-engineer.json  ai-security.json  cloud-compliance.json  iac-gitops.json  interview-behavioral.json  ml-engineering.json  nist-ai-rmf.json  owasp-llm-top10.json  platform-engineer.json  solutions-engineer.json  sre-fundamentals.json
templates/: _schema.yml  ai-platform-engineer.yml  ai-security-engineer.yml  cloud-compliance-engineer.yml  cloud-security-lead.yml  cloud-solutions-architect.yml  custom.yml  devsecops-engineer.yml  iac-gitops-engineer.yml  ml-engineer.yml  platform-engineer.yml  site-reliability-engineer.yml  solutions-engineer.yml
tests/: test_agents.py  test_analyzer.py  test_config.py  test_eval_cmd.py  test_knowledge_search.py  test_mcp_server.py  test_orchestrator_integration.py  test_pack_cmd.py  test_pivot_cmd.py  test_planner.py  test_project.py  test_quiz.py  test_resume_parser.py  test_scheduler.py  test_tracker.py  test_web_e2e.py
(+120 files in other folders)
